# irta_canopy_detection

./: CMakeLists.txt  iRTA_canopy_detection_RF.py  package.xml  requirements.txt  rospkg-1.2.10-py3-none-any.whl
docs/: doc.docx
models/: iRTA_RF_trained_model.sav
req/: catkin_pkg-0.4.23-py3-none-any.whl
